--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		</style>
 	</head>
 	<body>
-		<img src="_-533460938_u=4071079769,2161465513&fm=15&fmt=aut.jpg" width="20">
+		<img src="./_-533460938_u=4071079769,2161465513&fm=15&fmt=aut.jpg" width="20">
 		<p>点击</p>
 		<script>
 			var dog = document.querySelector("img");
